--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prod": "NODE_ENV=production webpack -p node server/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* client server",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress \"client/**/*.test.js\"",
+    "test": "mocha --compilers js:babel-register --reporter spec \"client/**/*.test.js\"",
+    "test2": "mocha --require babel-register --reporter spec \"client/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
@@ -48,28 +49,27 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-preset-stage-3": "^6.5.0",
+    "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
-    
-    
-    "enzyme": "2.2.0",
+    "enzyme": "^2.3.0",
     "eslint": "2.9.0",
     "eslint-plugin-import": "1.6.1",
     "eslint-plugin-react": "5.0.1",
     "eslint-watch": "2.1.11",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "react-addons-test-utils": "15.0.2",
-    "redux-mock-store": "1.0.2"
+    "redux-mock-store": "1.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
