--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "prod": "NODE_ENV=production webpack -p node server/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* client server",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --compilers js:babel-register --reporter spec \"client/**/*.test.js\"",
-    "test2": "mocha --require babel-register --reporter spec \"client/**/*.test.js\"",
+    "test": "NODE_ENV=testing mocha --compilers js:babel-register --reporter spec \"client/**/*.test.js\"",
+    "test2": "NODE_ENV=testing mocha --require babel-register --reporter spec \"client/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "connect-mongo": "^1.2.0",
     "express": "^4.13.4",
